# chamber

./: .gitattributes  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  set_diesel_toml.mjs  set_diesel_toml.py  tailwind.config.js  target_triple_rename.mjs  tsconfig.json  ui.config.json  vite.config.ts
.github/workflows/: backend-test.yml  release-build.yml  tauri-build.yml
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  cookies.txt  diesel.toml  diesel.toml.example  set_diesel_toml.py  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-08-29-051416_create_posts/: up.sql
src-tauri/migrations/2024-08-30-042108_create_palmdb/: down.sql  up.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
src-tauri/src/audio/: audio_handler.rs
src-tauri/src/commands/: audio_buffer.rs  audio_commands.rs  music_commands.rs  playlist_audio_commands.rs  playlist_commands.rs  playlist_music_commands.rs
src-tauri/src/commands/processing/: transcode.rs  trimming.rs
src-tauri/src/commands/youtube/: youtube_commands.rs  yt_web_parser.rs
src-tauri/src/entities/: music_entity.rs  playlist_entity.rs
src-tauri/src/helper/: constants.rs  db_lock.rs  files.rs  parser.rs  time.rs  tools.rs
src-tauri/src/models/: audio_model.rs  music_model.rs  playlist_audio_model.rs  playlist_model.rs  playlist_music_model.rs  youtube_model.rs
src-tauri/src/operations/: music_operations.rs  playlist_operations.rs  youtube_commands.rs
src-tauri/src/youtube/: constants.rs  youtube_handler.rs
src/components/: AudioContext.tsx  Button.tsx  Combobox.tsx  CustomToast.tsx  Dialog.tsx  Dropdown.tsx  Modal.tsx  Playback.tsx  Sheet.tsx  SideNavigation.tsx  TextField.tsx
src/components/solidui/: Button.tsx  Sheet.tsx  Switch.tsx  Table.tsx
src/components/table/: AllAudioModal.tsx
src/components/ui/: button.tsx  navigation-menu.tsx
src/interfaces/: interfaces.ts
src/pages/: AllAudiosPage.tsx  Encoding.tsx  HomePage.tsx  PlaylistPage.tsx  SearchPage.tsx  Transcoding.tsx
src/pages/compose/: SynthesizerPage.tsx
src/pages/modify/: ModifyEffects.tsx  ModifyTrimmer.tsx
src/pages/waveform/: WaveRecorder.tsx  WaveTrimmer.tsx
src/store/: store.ts
src/utils/: constants.ts  format.ts  helper.ts  types.ts
