[package]
name = "chamber"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-sidecar", "shell-open", "fs-copy-file", "fs-create-dir", "fs-read-file", "fs-write-file", "fs-remove-file", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
diesel_migrations = { version = "2.2.0"}
dirs = "3.0"
mp3-metadata = "0.3.4"
hound = "3.4.0"
mime_guess = "2.0"
base64 = "0.13.0"
tokio = { version = "1", features = ["full"] }
rusty_ytdl = "0.7.4"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
scraper = "0.12"
regex = "1.5.4"
rusty_dl = "1.0.8"
rodio = "0.19.0"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
